test_suite/alan-2022-examples/failing/002090_mutation.alan
source b begin get Q[]] end
